--- a/squirrel/templates/squirrel/list.html
+++ b/squirrel/templates/squirrel/list.html
@@ -1,5 +1,5 @@
 <a href="add/" rel="external nofollow" >ADD</a>
-<a href="stats/" rel="external nofollow" >ADD</a>
+<a href="stats/" rel="external nofollow" >STATS</a>
 
 <ul>
     {% for i in s %}
